--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: "17"
 
       - name: Cache Gradle
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
@@ -33,17 +33,8 @@ jobs:
       - name: Build Debug APK
         run: ./gradlew assembleDebug --stacktrace
 
-      - name: Build Release AAB
-        run: ./gradlew bundleRelease --stacktrace
-
       - name: Upload Debug APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: PouriaTruck-Debug-APK
+          name: pouria-truck-apk
           path: app/build/outputs/apk/debug/*.apk
-
-      - name: Upload Release AAB
-        uses: actions/upload-artifact@v3
-        with:
-          name: PouriaTruck-Release-AAB
-          path: app/build/outputs/bundle/release/*.aab
